--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "ajax": "^0.0.4",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "cloudinary": "^1.36.1",
     "color-convert": "^2.0.1",
     "cookie-parser": "~1.4.4",
